--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -20,8 +20,17 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: start;
-    text-align: center;
+    text-align: left;
     margin: 20px;
+}
+.container:has(.reading-page) {
+    max-width: 800px; /* Limit width for reading pages */
+}
+.reading-page {
+    margin: 0 auto;
+    padding: 5rem 0;
+    line-height: 1.6;
+    color: #333;
 }
 
 nav {
