generate empty pack list table

--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -677,7 +677,7 @@ tr.dragging::after {
 }
 
 .dirty::after {
-    content: "unsaved edits";
+    content: "edited";
     display: inline-block;
     /*position: relative;*/
     font-size: 0.8rem;
