--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -152,7 +152,7 @@ button:hover,
 }
 .modal-content {
     background-color: #fefefe;
-    margin: 15% auto; /* 15% from the top and centered */
+    margin: 15% auto 0 auto; /* 15% from the top and centered */
     border: 1px solid #888;
     width: 50%; /* Could be more or less, depending on screen size */
     min-width: 300px;
