--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -27,14 +27,14 @@ body {
 ::-webkit-scrollbar {
     width: 10px;
     height: 10px;
-    background: #e6f0fa;
-    border-radius: 8px;
+    background: #dfdfdf;
+    border-radius: 5px;
 }
 
 ::-webkit-scrollbar-thumb {
-    background: #b3d2ed;
+    background: #c4c4c4;
     margin: 2px;
-    border-radius: 8px;
+    border-radius: 5px;
     width: 8px;
 }
 
