--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -22,6 +22,7 @@ body {
     justify-content: start;
     text-align: left;
     margin: 20px;
+    overflow: auto;
 }
 /* Custom Webkit Scrollbar with rounded corners */
 ::-webkit-scrollbar {
