--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -314,7 +314,7 @@ button:hover,
 
 .tab-container {
     padding: 20px 0 0 0;
-    text-align:left;
+    text-align:center;
     overflow-x:auto;
     flex: 1;
     width: 100%;
