--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -3,41 +3,57 @@ body {
     font-family: Arial, sans-serif;
     background: var(--color-primary-gradient);
     margin: 0;
-    padding: 80px 0 0 0;
+    background-attachment: fixed;
+}
+body > div {
     display: flex;
-    justify-content: center;
+    flex-wrap: wrap;
     align-items: start;
-    height: calc(100vh - 80px);
+    justify-content: center;
+    position: fixed;
+    left:0;
+    right:0;
+    padding: calc(var(--padding-lg) / 2);/* 180px;*/
+    top: 80px;
+    bottom: 0;
+    overflow: auto;
 }
 
 .container {
     background: var(--background-color);
     box-shadow: 0 4px 8px var(--color-shadow);
-    border-radius: 4px;
-    padding: 20px;
+    border-radius: var(--radius-lg);
+    padding: var(--padding-md);
     width: 90%;
-    max-width: 1000px;
-    height: calc(100vh - 80px - 80px); /* Full height minus navbar and padding */
+    max-width: var(--page-width-large);
+    /*height: calc(100vh - 80px - 80px); /* Full height minus navbar and padding */
     display: flex;
     flex-direction: column;
     justify-content: start;
     text-align: left;
-    margin: 20px;
+    margin: calc(var(--padding-lg) / 2);
     overflow: auto;
 }
 /* Custom Webkit Scrollbar with rounded corners */
 ::-webkit-scrollbar {
+    z-index: 1000;
     width: 10px;
     height: 10px;
-    background: var(--color-scrollbar-bg);
-    border-radius: 5px;
+    background: var(--color-gray-bg);
+    border-radius: var(--radius-lg);
+}
+body > div::-webkit-scrollbar {
+    background: transparent;
 }
 
 ::-webkit-scrollbar-thumb {
-    background: var(--color-scrollbar-thumb);
+    background: var(--color-gray);
     margin: 2px;
-    border-radius: 5px;
+    border-radius: var(--radius-lg);
     width: 8px;
+}
+body > div::-webkit-scrollbar-thumb {
+    background: var(--color-primary);
 }
 
 
@@ -48,7 +64,7 @@ p {
 
 
 .container:has(.reading-page) {
-    max-width: 800px; /* Limit width for reading pages */
+    max-width: var(--page-width-small); /* Limit width for reading pages */
 }
 .reading-page {
     margin: 0 auto;
@@ -66,7 +82,14 @@ nav {
     height:80px;
     z-index: 3000;
     background-color: var(--background-color);
+    box-shadow: 0 4px 8px var(--color-shadow);
+    transition: top 0.3s ease-in-out;
 }
+
+body.scrolled nav {
+    top: -80px;
+}
+
 nav img {
     height: 64px;
     width: auto;
@@ -133,7 +156,7 @@ nav img {
     font-size: 1rem;
     line-height: 1.5;
     border: 1px solid var(--color-border);
-    border-radius: 0.25rem;
+    border-radius: var(--radius-md);
     transition: border-color 0.15s ease-in-out;
 }
 
@@ -165,7 +188,7 @@ button {
     padding: 0.375rem 0.75rem;
     font-size: 1rem;
     line-height: 1.5;
-    border-radius: 0.25rem;
+    border-radius: var(--radius-md);
     box-shadow: 2px 2px 8px -4px var(--color-shadow);
     transition: background-color 0.15s ease-in-out;
 }
@@ -199,7 +222,7 @@ button:hover {
     min-width: 300px;
     max-width: 500px;
     box-shadow: 0 4px 8px var(--color-shadow);
-    border-radius: 4px;
+    border-radius: var(--radius-md);
     overflow: hidden;
 }
 .modal-content:has(.modal-header) {
@@ -298,7 +321,7 @@ button:hover {
     margin: 0;
     border: 1px solid var(--color-border);
     box-shadow: inset 0 -8px 16px -16px var(--color-shadow);
-    border-radius: 0 0 3px 3px;
+    border-radius: 0 0 var(--radius-md) var(--radius-md);
     max-width: 100%;
 }
 
@@ -315,7 +338,7 @@ button:hover {
     max-width: 100%;
     height: auto;
     border-radius: 0;
-    border-radius: 0.25rem 0.25rem 0 0;
+    border-radius: var(--radius-md) var(--radius-md) 0 0;
     box-shadow: inset 0 -8px 16px -16px var(--color-shadow);
 }
 
@@ -364,7 +387,7 @@ button:hover {
 }
 
 .tabs-list {
-    border-radius: 0.25rem;
+    border-radius: var(--radius-md);
     overflow: auto;
     border: 1px solid var(--color-shadow);
     padding: 0;
@@ -432,8 +455,8 @@ button:hover {
     min-width:0;
     height: 28px;
     padding: 0;
-    border-radius: 3px;
-    border: 1px solid rgba(5, 0, 50, 0.2);
+    border-radius: var(--radius-md);
+    border: 1px solid var(--color-border);
     background-color: #f1f1f1;
     cursor: pointer;
     position: absolute;
@@ -483,7 +506,7 @@ button:hover {
     width: 100%;
     overflow-x: auto;
     /*margin-top: 1rem;*/
-    /*border-radius: 0.25rem;*/
+    /*border-radius: var(--radius-md);*/
     /*box-shadow: 0 0 0 1px #dee2e6;*/
     /*box-shadow: inset 2px 2px 12px 0px rgba(5, 0, 50, 0.1);*/
 }
@@ -678,7 +701,7 @@ tr.dragging::after {
     padding: .25em;
     margin-top: .5em;
     background-color: var(--color-gray-bg);
-    border-radius: 4px;
+    border-radius: var(--radius-md);
     transition: background-color 0.15s ease-in-out;
 }
 .table-cell-card:only-child {
@@ -739,7 +762,7 @@ tr:hover > td > .table-edit-textarea {
     /*position: relative;*/
     font-size: 0.8rem;
     color: var(--color-red);
-    border-radius: 4px;
+    border-radius: var(--radius-md);
     border: 1px dashed var(--color-red);
     padding: 1.5px;
     margin: 0 4px;
