--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -1,6 +1,7 @@
 @import url('theme.css');
 body {
     font-family: Arial, sans-serif;
+    color: var(--color-text);
     background: var(--color-primary-gradient);
     margin: 0;
     background-attachment: fixed;
@@ -252,7 +253,7 @@ button:hover {
 }
 
 .modal-close:hover {
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: var(--color-gray-bg-hover);
     color: var(--color-text-inverted);
 }
 .modal-body {
@@ -265,6 +266,7 @@ button:hover {
 /* Tab Navigation */
 .tabs {
     position: relative;
+    top: 1px;
     text-align: left;
     white-space: nowrap;
     overflow-x: auto;
@@ -359,6 +361,7 @@ button:hover {
     flex: 1;
     width: 100%;
     min-height: 100px;
+    border-top: 1px solid var(--color-border);
     box-shadow: 0 -12px 14px -18px var(--color-shadow);
 }
 
@@ -419,8 +422,8 @@ button:hover {
 }
 
 .tab-close:hover {
-    background-color: rgba(0, 0, 0, 0.3);
-    color: var(--background-color);
+    background-color: var(--color-gray-bg-hover);
+    color: var(--color-text);
 }
 
 .new-tab-button {
@@ -428,9 +431,9 @@ button:hover {
     height: 24px;
     min-width: 0;
     border-radius: 50%;
-    border: 1px solid rgba(5, 0, 50, 0.2);
-    background-color: #f1f1f1;
-    color: #666;
+    border: 1px solid var(--color-border);
+    background-color: var(--color-gray-bg);
+    color: var(--color-text-light);
     font-size: 18px;
     line-height: 20px;
     padding: 0;
@@ -439,12 +442,12 @@ button:hover {
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    box-shadow: -1px 1px 6px -2px rgba(5, 0, 50, 0.6);
+    box-shadow: -1px 1px 6px -2px var(--color-shadow);
 }
 
 .new-tab-button:hover {
     background-color: var(--background-color);
-    color: #333;
+    color: var(--color-text-light);
 }
 
 /* Hamburger Menu */
@@ -463,7 +466,7 @@ button:hover {
     left: 8px;
     top: 4px;
     /*transform: translateY(-50%);*/
-    box-shadow: -1px 1px 6px -2px rgba(5, 0, 50, 0.6);
+    box-shadow: -1px 1px 6px -2px var(--color-shadow);
 }
 
 .hamburger-menu:hover {
@@ -651,7 +654,7 @@ td.spacer-cell, th.spacer-cell {
     content: "⋮⋮";
     display: block;
     text-align: center;
-    color: var(--color-row-drag-handle);
+    color: var(--color-text-light);
     font-size: 12px;
     line-height: 100%;
 }
