--- a/docs/html/templates/app.html
+++ b/docs/html/templates/app.html
@@ -6,7 +6,7 @@
         <button class="hamburger-menu" onclick="this.closest('nav').classList.toggle('open')">≡</button>
     </nav>
 </header>
-<div id="app">
+<div id="app-content">
     <!--content-->
     <footer>
         <p>
