--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -182,7 +182,14 @@ p {
     margin: calc(var(--padding-lg) / 2);
     overflow: auto;
 }
-
+.container-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 1rem;
+    padding-bottom: 0.5rem;
+    border-bottom: 1px solid var(--color-border);
+}
 
 
 
